--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -12,6 +12,7 @@
     %th
     %th
     %th
+    %th
 
   - @services.each do |service|
     %tr
@@ -24,6 +25,7 @@
           = service.certificate.compromised
       %td= service.current
       %td= service.created_at
+      %td= link_to 'Scan', scan_service_path(service)
       %td= link_to 'Show', service
       %td= link_to 'Edit', edit_service_path(service)
       %td= link_to 'Destroy', service, :method => :delete, :data => { :confirm => 'Are you sure?' }
