Highlight time invalid certificates

--- a/app/views/certificates/index.html.haml
+++ b/app/views/certificates/index.html.haml
@@ -20,8 +20,8 @@
         %td.cn= c.cn
         %td.serial= link_to truncate(c.serial,length: 16), c
         %td.compromised= c.compromised
-        %td= c.not_before.to_date
-        %td= c.not_after.to_date
+        %td{ class: (not c.not_before.past?) ? 'danger' : '' }= c.not_before.to_date
+        %td{ class: (not c.not_after.future?) ? 'danger' : '' }= c.not_after.to_date
         %td= c.services_using.length
         %td= link_to 'Show', c
         %td= link_to 'Edit', edit_certificate_path(c)
