--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -19,11 +19,9 @@
       %td= service.hostname
       %td= service.port
       %td= link_to truncate(service.certificate.serial,length: 10), service.certificate
-      %td
-        %span.label{class: service.certificate.compromised ? 'label-danger' : 'label-success' }
-          = service.certificate.compromised
+      %td{class: service.certificate.compromised ? 'danger' : 'success'}= service.certificate.compromised
       %td= service.current
-      %td= service.certificate.not_after.to_date
+      %td{class: service.certificate.not_after.future? ? 'success' : 'danger' }= service.certificate.not_after.to_date
       %td= link_to 'Scan', scan_service_path(service)
       %td= link_to 'Show', service
       %td= link_to 'Edit', edit_service_path(service)
