--- a/app/views/certificates/index.html.haml
+++ b/app/views/certificates/index.html.haml
@@ -21,7 +21,7 @@
         %td.serial= link_to truncate(c.serial,length: 16), c
         %td.compromised= c.compromised
         %td{ class: (not c.not_before.past?) ? 'danger' : '' }= c.not_before.to_date
-        %td{ class: (not c.not_after.future?) ? 'danger' : '' }= c.not_after.to_date
+        %td{ class: c.expired? ? 'danger' : c.expires_soon? ? 'warning' : '' }= c.not_after.to_date
         %td= c.services_using.length
         %td= link_to 'Show', c
         %td= link_to 'Edit', edit_certificate_path(c)
