--- a/app/views/services/index.html.haml
+++ b/app/views/services/index.html.haml
@@ -21,7 +21,7 @@
       %td= service.certificate ? link_to(truncate(service.certificate.serial,length: 10), service.certificate) : ''
       %td{class: (service.certificate and service.certificate.compromised) ? 'danger' : 'success'}= service.certificate ? service.certificate.compromised : ''
       %td= service.current
-      %td{class: (service.certificate and service.certificate.expired?) ? 'danger' : service.certificate.expires_soon? ? 'warning' : '' }= service.certificate ? service.certificate.not_after.to_date : ''
+      %td{class: (service.certificate and service.certificate.expired?) ? 'danger' : (service.certificate and service.certificate.expires_soon?) ? 'warning' : '' }= service.certificate ? service.certificate.not_after.to_date : ''
       %td= link_to 'Scan', scan_service_path(service)
       %td= link_to 'Show', service
       %td= link_to 'Edit', edit_service_path(service)
