--- a/app/views/services/_form.html.haml
+++ b/app/views/services/_form.html.haml
@@ -21,5 +21,8 @@
   .field
     = f.label :current
     = f.check_box :current
+  .field
+    = f.label :retired
+    = f.check_box :retired
   .actions
     = f.submit 'Save'
